--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Buenosdiasporlamañana</title>
 </head>
 <body>
+    <a href="file:///C:/Users/Estudiantes/Documents/DesarrolloWeb-main/prueba%20de%20nav.html"> <img src="https://quizbash.com/assets/img/games/logo-blue-moon-r.jpg" width="100px" alt=""></a>
     <h1>Primera prueba de diseño</h1>
     <h2>¿Funcionara?</h2>
     <h3>Claro que sì</h3>
