--- a/Form.html
+++ b/Form.html
@@ -10,16 +10,32 @@
    <form action="">
 
 
-    <input type="text">
-    <label for=""></label>
+    <input type="text" id="nombre">
+    <label for="nombre"> escriba su nombre</label>
     <br>
-    <input type="checkbox" name="cosas que me gustan">
+    <p>tengo alguna de estas dos</p>
+    <input type="checkbox" name="Femenino" id="">
+    <label for="Femenino">Andrea</label>
     <br>
-    <input type="checkbox" name="cosas que no me gustan">
+    <input type="checkbox" name="Masculino" id="">
+    <label for="masculino"> Andres</label>
     <br>
-    <input type="radio" name="¿Si o no?" id="">
+    <p>¿cual es màs dificil?</p>
+    <input type="radio" name="Dark Souls" id="Dark Souls">
+    <label for="Dark Souls">Dark Souls</label>
+    <br>
+    <input type="radio" name="Undertale" id="Undertale">
+    <label for="Undertale">Undertale</label>
     <br>
     <input type="datetime-local" name="" id="">
+    <select name="" id="">
+        <option value="Minecraft">Minecraft</option>
+        <option value="Roblox">Roblox</option>
+        <option value="Undertale">Undertale</option>
+    </select>
+    <br>
+    <input type="submit">
+
 
    </form> 
 </body>
