--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
     <p>Lo unico que debes hacer es <strong>instalar</strong> esta <em>maravillosa</em> aplicacion</p>
     <br>
     <img src="https://code.visualstudio.com/opengraphimg/opengraph-blog.png" width="400" height="200" alt=""> 
+    <nav>
+        <ul>
+            <li style="display: inline; margin: 15px;" > <a href="Formulario.html">Clic aqui para ir a el formulario</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
