--- a/Formulario.html
+++ b/Formulario.html
@@ -50,7 +50,7 @@
     <label for="Among Us">Among Us</label>
     <br>
     <br>
-    <h3>¿Cual de estos juegos es su favorito?</h3>
+    <h3> <strong>¿Cual de estos juegos es su favorito?</strong></h3>
   <select name="" id="">
     <option value="Minecraft">Minecraft</option>
     <option value="Roblox">Roblox</option>
